@@ -30,7 +30,7 @@ struct _TnyCamelAccountPriv
 	GStaticRecMutex *service_lock;
 	CamelService *service;
 	CamelException *ex;
-	gchar *url_string, *id, *user, *host, *proto;
+	gchar *url_string, *id, *user, *host, *proto, *mech;
 	TnyGetPassFunc get_pass_func;
 	TnyForgetPassFunc forget_pass_func;
 	gboolean pass_func_set, forget_pass_func_set;
