@@ -79,13 +79,14 @@ tny_camel_store_account_reconnect (TnyCamelAccount *self)
 			CamelURL *url = NULL;
 			GList *options = apriv->options;
 			gchar *proto = g_strdup_printf ("%s://", apriv->proto); 
-
+			
 			url = camel_url_new (proto, apriv->ex);
 			g_free (proto);
 
 			camel_url_set_protocol (url, apriv->proto); 
 			camel_url_set_user (url, apriv->user);
 			camel_url_set_host (url, apriv->host);
+			camel_url_set_authmech (url, apriv->mech);
 
 			while (options)
 			{
