@@ -238,7 +238,7 @@ tny_maemo_account_store_get_accounts (TnyAccountStore *self, TnyList *list, TnyG
 
 	for (i=0; i < count; i++)
 	{
-		gchar *proto, *type, *key, *name;
+		gchar *proto, *type, *key, *name, *mech;
 		TnyAccount *account = NULL;
 		GSList *options;
 
@@ -266,6 +266,11 @@ tny_maemo_account_store_get_accounts (TnyAccountStore *self, TnyList *list, TnyG
 
 		key = g_strdup_printf ("/apps/tinymail/accounts/%d/proto", i);
 		proto = gconf_client_get_string (priv->client, 
+			(const gchar*) key, NULL);
+		g_free (key);
+
+		key = g_strdup_printf ("/apps/tinymail/accounts/%d/mech", i);
+		mech = gconf_client_get_string (priv->client, 
 			(const gchar*) key, NULL);
 		g_free (key);
 	    
@@ -299,8 +304,14 @@ tny_maemo_account_store_get_accounts (TnyAccountStore *self, TnyList *list, TnyG
 				(const gchar*) key, NULL);
 			g_free (key);
 			tny_account_set_name (TNY_ACCOUNT (account), name);
-			g_free (name);
+			if (name)
+			{
+				tny_account_set_name (TNY_ACCOUNT (account), name);
+				g_free (name);
+			}
 
+			if (mech)
+				tny_account_set_mech (TNY_ACCOUNT (account), mech);
 
 			key = g_strdup_printf ("/apps/tinymail/accounts/%d/options", i);
 			options = gconf_client_get_list (priv->client, 
@@ -378,6 +389,10 @@ tny_maemo_account_store_get_accounts (TnyAccountStore *self, TnyList *list, TnyG
 
 		if (proto)
 			g_free (proto);
+
+		if (mech)
+			g_free (mech);
+
 
 	}
 
